[gd_scene load_steps=8 format=2]

[ext_resource path="res://Mario1/Characters/carapaceFlipped.png" type="Texture" id=1]
[ext_resource path="res://Mario1/Characters/carapace.png" type="Texture" id=2]
[ext_resource path="res://Scripts/KoopaSpin.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 7.50316
height = 2.25494

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 7.58342, 1.26971 )

[sub_resource type="CapsuleShape2D" id=5]
radius = 4.58139
height = 12.1478

[node name="KinematicBody2D" type="KinematicBody2D"]
scale = Vector2( 4, 4 )
collision_layer = 32
collision_mask = 17
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 7.62939e-06, 8.47136 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Area2DDessus" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DDessus"]
position = Vector2( 0, 1.32648 )
shape = SubResource( 4 )

[node name="Area2DCote" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DCote"]
position = Vector2( 0, 8.029 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="Timer_Start" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="body_entered" from="Area2DDessus" to="." method="_on_Area2DDessus_body_entered"]
[connection signal="body_entered" from="Area2DCote" to="." method="_on_Area2DCote_body_entered"]
[connection signal="timeout" from="Timer_Start" to="." method="_on_Timer_Start_timeout"]
